--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
   <header>
     <h1>Planets</h1>
+    <h2>Introduction</h2>
+    <h2>Terrestrial planets</h2>
+    <h2>Mars</h2>
+    <h2>Venus</h2>
   </header>
 
   <main>
