--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- All the HTML content goes in here -->
 
   <header>
-    <h1>Planets</h1>
+    <h1 class="planets">Planets</h1>
     <h2>Introduction</h2>
     <h2>Terrestrial planets</h2>
     <h2>Mars</h2>
