--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
   <header>
     <h1 class="planets">Planets</h1>
-    <h2>Introduction</h2>
-    <h2>Terrestrial planets</h2>
-    <h2>Mars</h2>
-    <h2>Venus</h2>
+    <nav>
+      <ul>
+        <li><a href="#">Introduction</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
+        <li><a href="#">Mars</a></li>
+        <li><a href="#">Venus</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
