--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1 class="planets">Planets</h1>
     <nav>
       <ul>
-        <li><a href="#">Introduction</a></li>
-        <li><a href="#">Terrestrial planets</a></li>
-        <li><a href="#">Mars</a></li>
-        <li><a href="#">Venus</a></li>
+        <li><a href="#Intro">Introduction</a></li>
+        <li><a href="#Terrestrial">Terrestrial planets</a></li>
+        <li><a href="#Mars">Mars</a></li>
+        <li><a href="#Venus">Venus</a></li>
       </ul>
     </nav>
   </header>
