--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- All the HTML content goes in here -->
 
   <header>
-    <h1 class="planets">Planets</h1>
-    <nav>
+    <h1>Planets</h1>
+    <nav class="nav">
       <ul>
         <li><a href="#Intro">Introduction</a></li>
         <li><a href="#Terrestrial">Terrestrial planets</a></li>
